16718
The following is in the clipboard:

{code}
scala> case class A() {
{code}

I paste this (with cmd+v), REPL recognises a transcript paste and tells me to use ctrl-D to finish. I add some more code (a single '}'), hit ctrl-D and the following happens:

{code}
scone:scala-2.10.0.rdev-4250-2012-01-25-gde2b0c6 rikebs$ bin/scala
Welcome to Scala version 2.10.0.rdev-4250-2012-01-25-gde2b0c6 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_29).
Type in expressions to have them evaluated.
Type :help for more information.

scala> scala> case class A() {

// Detected repl transcript paste: ctrl-D to finish.

}

// Replaying 1 commands from transcript.

scala> case class A() {


scala> A
<console>:8: error: not found: value A
              A
              ^
{code}

